Fix container margin on mobile

--- a/saleor/static/scss/dashboard/components/_nav.scss
+++ b/saleor/static/scss/dashboard/components/_nav.scss
@@ -164,6 +164,9 @@ header {
     height: $subheader-height;
     .breadcrumbs {
       margin-left: 40px;
+      @media (max-width: $small-screen) {
+        margin-left: 15px;
+      }
       @media (min-width: $large-screen) {
         margin-left: 270px;
       }
@@ -188,6 +191,9 @@ header {
     max-width: 1200px;
     width: auto;
     transition: margin .1s;
+    @media (max-width: $small-screen) {
+      margin: 15px 15px 0;
+    }
     @media (min-width: $large-screen) {
       margin-left: 270px;
     }
